# shin-translation-tools

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
shin-font/: .gitignore  Cargo.toml
shin-font/src/: lib.rs
shin-rom/: Cargo.toml
shin-rom/src/: create.rs  header.rs  index.rs  lib.rs  main.rs  progress.rs
shin-rom/src/actions/: create.rs  extract.rs  mod.rs
shin-rom/src/create/: allocate.rs  mod.rs  source.rs  visit.rs  write.rs
shin-rom/src/extract/: iter.rs  mod.rs
shin-snr/: Cargo.toml
shin-snr/src/: ctx.rs  instruction.rs  lib.rs  location_painter.rs  message_parser.rs  reader.rs  text.rs  writer.rs
shin-snr/src/instruction/: dispatch.rs  mod.rs  react.rs
shin-snr/src/layout/: layout_dump.rs  layouter.rs  mod.rs  reflow.rs
shin-snr/src/layout/linebreak/: mod.rs
shin-snr/src/layout/message_parser/: lint.rs  mod.rs  sink.rs
shin-snr/src/message_parser/: lint.rs  mod.rs
shin-snr/src/operation/: arena.rs  dispatch.rs  mod.rs  parse.rs  repr.rs  serialize.rs
shin-snr/src/operation/schema/: mod.rs  opcode.rs
shin-snr/src/operation/schema/def/: command.rs  instruction.rs  mod.rs  opcode.rs
shin-snr/src/reactor/: dump_bin.rs  location_painter.rs  mod.rs  offset_validator.rs  string_roundrip_validator.rs
shin-snr/src/reactor/rewrite/: csv_rewriter.rs  mod.rs  noop_rewriter.rs  x_rewriter.rs
shin-snr/src/reactor/trace/: console.rs  csv.rs  mod.rs
shin-text/: Cargo.toml
shin-text/src/: cow.rs  decode_tables.rs  encode_tables.rs  lib.rs
shin-tl/: Cargo.toml  README.md
shin-tl/src/: ctx.rs  instruction.rs  main.rs  reader.rs
shin-tl/src/reactor/: mod.rs  offset_validator.rs
shin-tl/src/reactor/rewrite/: csv_rewriter.rs  mod.rs
shin-tl/src/reactor/trace/: mod.rs
shin-tl/src/rom/: mod.rs  version.rs
shin-tl/src/snr/: mod.rs
shin-tl/src/text/: mod.rs
shin-tl/wix/: main.wxs
shin-versions/: Cargo.toml
shin-versions/src/: lib.rs
src/: ctx.rs  main.rs  reader.rs
src/reactor/: mod.rs  offset_validator.rs  reader.rs  rewrite.rs
src/reactor/rewrite/: mod.rs
src/reactor/trace/: console.rs  csv.rs  mod.rs
src/text/: mod.rs
