[workspace]
resolver = "2"
members = [
    "shin-versions",
    "shin-text",
    "shin-rom",
    "shin-snr",
    "shin-tl",
]

[workspace.package]
authors = ["⭐NINIKA⭐️"]
repository = "https://github.com/DCNick3/shin-translation-tools"
homepage = "https://github.com/DCNick3/shin-translation-tools"
license = "MPL-2"

[workspace.dependencies]
clap = "4.4.10"
clap_complete = "4.4.4"

bumpalo = "3.14.0"
camino = "1.1.6"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "skip"

[workspace.metadata.release]
# do not publish to crates.io
publish = false
# lockstep versioning
shared-version = true
# do not prefix the crate name to tag
tag-prefix = ""

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
