[workspace]
resolver = "2"
members = [
    "shin-versions",
    "shin-text",
    "shin-rom",
    "shin-snr",
    "shin-tl",
]

[workspace.package]
authors = ["⭐NINIKA⭐️"]
repository = "https://github.com/DCNick3/shin-translation-tools"
homepage = "https://github.com/DCNick3/shin-translation-tools"
license = "MPL-2"

[workspace.dependencies]
clap = "4.4.10"
clap_complete = "4.4.4"

bumpalo = "3.14.0"
camino = "1.1.6"

[profile.release]
debug = true

[workspace.metadata.release]
# do not publish to crates.io
publish = false
# lockstep versioning
shared-version = true
# do not prefix the crate name to tag
tag-prefix = ""

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
debug = false
lto = "thin"
