[workspace]
resolver = "2"
members = [
    "shin-versions",
    "shin-text",
    "shin-rom",
    "shin-snr",
    "shin-tl",
    "shin-font",
]

[workspace.package]
authors = ["⭐NINIKA⭐️"]
repository = "https://github.com/DCNick3/shin-translation-tools"
homepage = "https://github.com/DCNick3/shin-translation-tools"
license = "MPL-2"

[workspace.dependencies]
clap = "4.4.10"
clap_complete = "4.4.4"

serde = "1.0.218"

bumpalo = "3.14.0"
camino = "1.1.6"

enum-map = "3.0.0-beta.2"

[profile.release]
debug = true

[workspace.metadata.release]
# do not publish to crates.io
publish = false
# lockstep versioning
shared-version = true
# do not prefix the crate name to tag
tag-prefix = ""

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
debug = false
lto = "thin"

[profile.dev.package.ruzstd]
opt-level = 3
