[package]
name = "shin-rom"
version = "0.3.0"
edition = "2021"
description = "A tool to extract an package .rom files used by shin engine"

authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shin-versions = { path = "../shin-versions", features = ["clap"] }
shin-text = { path = "../shin-text" }

clap = { workspace = true, features = ["derive"]  }
camino = { workspace = true }
bumpalo = { workspace = true }
binrw = "0.13.3"
memmap2 = "0.9.0"
arrayref = "0.3.7"
proc-bitfield = "0.3.0"
indicatif = "0.17.7"
bytesize = "1.3.0"
itertools = "0.12.0"

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tracing-indicatif = "0.3.6"