[package]
name = "shin-snr"
version = "0.1.0"
edition = "2021"
description = "A library to help translate strings within shin's SNR files."

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shin-versions = { path = "../shin-versions", features = ["clap"] }
shin-text = { path = "../shin-text" }

once_cell = "1.18.0"
bumpalo = { workspace = true, features = ["collections"] }
serde = { version = "1.0.193", features = ["derive"] }
csv = "1.3.0"
smallvec = { version = "2.0.0-alpha.1", features = ["write"] }
camino = { workspace = true }

tracing = "0.1.40"