[package]
name = "shin-snr"
version = "0.9.0"
edition = "2021"
description = "A library to help translate strings within shin's SNR files."

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shin-versions = { path = "../shin-versions", features = ["serde"] }
shin-text = { path = "../shin-text" }
shin-font = { path = "../shin-font" }

bumpalo = { workspace = true, features = ["collections"] }
serde = { workspace = true, features = ["derive"] }
csv = "1.3.0"
smallvec = { version = "2.0.0-alpha.1", features = ["write"] }

# for outputting SNR diagnostics
miette = "7.5.0"
thiserror = "2.0.11"

owo-colors = "4.1.0"
unicode-width = "0.2.0"

tracing = "0.1.40"

minicbor = { version = "0.26.4", features = ["std", "derive"] }

clap = { workspace = true, features = ["derive"], optional = true }

[features]
clap = ["dep:clap"]
