[package]
name = "shin-text"
version = "0.10.2"
edition = "2024"
description = "A library implementing the variant of Shift-JIS used by the shin engine"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { workspace = true, features = ["collections"] }
