[package]
name = "shin-tl"
version = "0.5.0"
edition = "2021"
description = "A multi-tool for translating shin games"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "75A569A3-C988-462C-905A-D94424E56FD6"
path-guid = "33DC77AB-FA18-45C1-A4A5-254EE2F9EE89"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shin-versions = { path = "../shin-versions", features = ["clap"] }
shin-text = { path = "../shin-text" }
shin-snr = { path = "../shin-snr" }
shin-rom = { path = "../shin-rom" }

once_cell = "1.18.0"
bumpalo = { workspace = true, features = ["collections"] }
serde = { version = "1.0.193", features = ["derive"] }
csv = "1.3.0"
smallvec = { version = "2.0.0-alpha.1", features = ["write"] }
camino = { workspace = true }

clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
