[package]
name = "shin-versions"
version = "0.3.0"
edition = "2021"
description = "A library containing metadata about versions of the shin engine"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clap = [
    "dep:clap",
]

[dependencies]
clap = { workspace = true, optional = true, features = ["derive"] }
arrayref = "0.3.7"