[package]
name = "shin-versions"
version = "0.10.3"
edition = "2024"
description = "A library containing metadata about versions of the shin engine"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clap = [
    "dep:clap",
]
serde = [
    "dep:serde",
]

[dependencies]
clap = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }
arrayref = "0.3.7"

[dev-dependencies]
serde_json = "1.0.139"
